# verandah-plugin-pomodoro

./: .envrc  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  build.rs  codebook.toml  cog.toml  flake.nix
examples/: pomodoro.toml
packaging/arch/: .gitignore  PKGBUILD
src/: cli.rs  colors.rs  config.rs  error.rs  lib.rs  render.rs  socket.rs  sound.rs  timer.rs
