[package]
name = "verandah-plugin-pomodoro"
version = "0.11.0"
edition = "2024"
description = "Pomodoro timer widget plugin for verandah"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "verandah-pomodoroctl"
path = "src/bin/pomodoroctl.rs"

[dependencies]
verandah-plugin-api = { git = "https://github.com/sw1nn/verandah-plugin-api.git", tag = "v0.2.0" }
verandah-plugin-utils = { git = "https://github.com/sw1nn/verandah-plugin-utils.git", tag = "v0.2.1" }
toml = "0.9"
abi_stable = "0.11"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
derive_more = { version = "2", features = ["from", "display"] }
strum = { version = "0.27", features = ["derive"] }
xdg = "2"
clap = { version = "4", features = ["derive"] }

# Rendering
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"

# Audio
rodio = { version = "0.19", default-features = false, features = [
  "mp3",
  "wav",
  "vorbis",
] }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
