[package]
name = "verandah-plugin-pomodoro"
version = "0.14.3"
edition = "2024"
description = "Pomodoro timer widget plugin for verandah"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "verandah-pomodoroctl"
path = "src/bin/pomodoroctl.rs"

[dependencies]
verandah-plugin = { git = "https://github.com/sw1nn/verandah-plugin.git", tag = "v1.3.0" }
abi_stable = "0.11"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
derive_more = { version = "2", features = ["from", "display", "debug"] }
strum = { version = "0.27", features = ["derive"] }
xdg = "2"
clap = { version = "4", features = ["derive"] }

# Audio
rodio = { version = "0.19", default-features = false, features = [
  "mp3",
  "wav",
  "vorbis",
] }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
